add gitignore; fix biography section; change layout;

--- a/index.html
+++ b/index.html
@@ -43,132 +43,125 @@
         <h2>Mitlitska</h2>
     </header>
 
-
-    <section class="section-biography">
-        <div class="container-outer">
-            <div class="row-outer">
-                <div class="col-md-10 offset-md-1">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12 text-left">
-                                <h3><span>Yana</span><br>Mitlitska</h3>
-                                <p>About Yana Mitlitska Yana
-                                    <br><br>
-                                Yana Mitlitska was born in Kyiv, Ukraine. After she had graduated from an Art School, 
+    <main>
+        <div class="container-main">
+            <section class="section-biography">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 text-left">
+                            <h3><span>Yana</span><br>Mitlitska</h3>
+                            <p>About Yana Mitlitska Yana
+                                <br><br>
+                                Yana Mitlitska was born in Kyiv, Ukraine. After she had graduated from an Art School,
                                 she founded an art studio. Being just a hobby at the beginning, it consumed Yana totally very fast.
-                                Nowadays Yana is skilled artist with about 10 years of experience in painting. 
+                                Nowadays Yana is skilled artist with about 10 years of experience in painting.
                                 Currently she is working in an art studio in Kyiv.
-                                    <br><br>
-                                During her career she collaborated with famous interior designers and painted about 50 oil canvases 
+                                <br><br>
+                                During her career she collaborated with famous interior designers and painted about 50 oil canvases
                                 for appartments in famous Turkey Hotel "Orka Sunrise". In addition her art works presented
                                 on exhibitions in Ukraine, Ireland and Turkey. Being fully dedicated to the craft of painting,
                                 she creates unique art works and can follow your way of
-                                    <br><br>
+                                <br><br>
                                 More ...
-                                </p>
-                            </div>
-                            <!-- /.col-12 text-left-->   
+                            </p>
                         </div>
-                        <!-- /.row -->           
+                        <!-- /.col-12 text-left-->
                     </div>
-                    <!-- /.container -->
+                    <!-- /.row -->
                 </div>
-                <!-- /.col-md-12 -->
-            </div>
-            <!-- /.row-outer -->
-        </div>
-        <!-- /.container-outer -->
-    </section>
-    <!-- /.section-biography -->
+                <!-- /.container -->
+            </section>
+            <!-- /.section-biography -->
 
-
-    <section class="section-gallery">
-        <div class="container">
-            <div class="row">
-                <h3 class="col-12">Art Gallery</h3>
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
-                    <li class="nav-item col-4" role="presentation">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home"
-                    role="tab" aria-controls="home" aria-selected="true">Home</a>
-                    </li>
-                    <li class="nav-item col-4" role="presentation">
-                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" 
-                    role="tab" aria-controls="profile" aria-selected="false">Profile</a>
-                    </li>
-                    <li class="nav-item col-4" role="presentation">
-                    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" 
-                    role="tab" aria-controls="contact" aria-selected="false">Contact</a>
-                    </li>
-                </ul>
-                <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <div class="col-12">
-                            <a href="#">
-                                <img src="img/desktop_photo/1.png" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a href="#">
-                                <img src="img/desktop_photo/2.png" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a href="#">
-                                <img src="img/desktop_photo/3.png" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a href="#">
-                                <img src="img/desktop_photo/4.png" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a href="#">
-                                <img src="img/desktop_photo/5.png" alt="">
-                            </a>
-                        </div>
-                        <div class="col-12">
-                            <a href="#">
-                                <img src="img/desktop_photo/6.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-                    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
-                </div>
-                
-                <button class="btn open-gallery col-12">
-                    <a href="#">View All</a>
-                </button>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.section-gallery -->
-
-
-    <section class="section-message">
-        <div class="container">
-            <div class="row">
-                <div class="col-8">
-                    <h3>Contact me</h3>
+            <section class="section-gallery">
+                <div class="container">
                     <div class="row">
-                        <input class="full-name col-6" type="text" placeholder="Full Name">
-                        <input class="email col-6" type="text" placeholder="Email address">
-                        <input class="message col-12" type="text" placeholder="Your message">
-                    </div>
-                    <button class="btn send-message">
-                        <a href="#">Send</a>
-                    </button>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.section-message -->
+                        <h3 class="col-12">Art Gallery</h3>
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            <li class="nav-item col-4" role="presentation">
+                                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home"
+                                   role="tab" aria-controls="home" aria-selected="true">Home</a>
+                            </li>
+                            <li class="nav-item col-4" role="presentation">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile"
+                                   role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+                            </li>
+                            <li class="nav-item col-4" role="presentation">
+                                <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact"
+                                   role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="myTabContent">
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                <div class="col-12">
+                                    <a href="#">
+                                        <img src="img/desktop_photo/1.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-12">
+                                    <a href="#">
+                                        <img src="img/desktop_photo/2.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-12">
+                                    <a href="#">
+                                        <img src="img/desktop_photo/3.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-12">
+                                    <a href="#">
+                                        <img src="img/desktop_photo/4.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-12">
+                                    <a href="#">
+                                        <img src="img/desktop_photo/5.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-12">
+                                    <a href="#">
+                                        <img src="img/desktop_photo/6.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+                            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+                        </div>
 
+                        <button class="btn open-gallery col-12">
+                            <a href="#">View All</a>
+                        </button>
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.container -->
+            </section>
+            <!-- /.section-gallery -->
+
+            <section class="section-message">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-8">
+                            <h3>Contact me</h3>
+                            <div class="row">
+                                <input class="full-name col-6" type="text" placeholder="Full Name">
+                                <input class="email col-6" type="text" placeholder="Email address">
+                                <input class="message col-12" type="text" placeholder="Your message">
+                            </div>
+                            <button class="btn send-message">
+                                <a href="#">Send</a>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.container -->
+            </section>
+            <!-- /.section-message -->
+        </div>
+        <!-- /.container-main -->
+    </main>
+    <!--  /main  -->
 
     <footer>
         <div class="container-fluid">
@@ -193,12 +186,6 @@
         <!-- /.container -->
     </footer>
     <!-- /.footer -->
-
-
-
-
-
-
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
 integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
