fixed problems with gallery

--- a/index.html
+++ b/index.html
@@ -113,41 +113,37 @@
                         <div class="tab-content mt-5" id="myTabContent">
                             <div class="tab-pane fade show active justify-content-center" id="home" role="tabpanel" aria-labelledby="home-tab">
                                 <div class="row m-auto">
-                                    <div class="col">
+                                    <div class="col-lg-4 col-md-6">
                                         <a href="#">
                                             <img src="img/desktop_photo/1.png" alt="">
                                         </a>
                                     </div>
-                                    <div class="col">
+                                    <div class="col-lg-4 col-md-6">
                                         <a href="#">
                                             <img src="img/desktop_photo/2.png" alt="">
                                         </a>
                                     </div>
-                                </div>
-                                <div class="row  m-auto">
-                                    <div class="col">
+                                    <div class="col-lg-4 col-md-6">
                                         <a href="#">
                                             <img src="img/desktop_photo/3.png" alt="">
                                         </a>
                                     </div>
-                                    <div class="col">
+                                    <div class="col-lg-4 col-md-6">
                                         <a href="#">
                                             <img src="img/desktop_photo/4.png" alt="">
                                         </a>
                                     </div>
-                                </div>
-                                <div class="row  m-auto">
-                                    <div class=" col">
+                                    <div class=" col-lg-4 col-md-6">
                                         <a href="#">
                                             <img src="img/desktop_photo/5.png" alt="">
                                         </a>
                                     </div>
-                                    <div class="col">
+                                    <div class="col-lg-4 col-md-6">
                                         <a href="#">
                                             <img src="img/desktop_photo/6.png" alt="">
                                         </a>
                                     </div>
-                                </div>
+                                </div> 
                             </div>
                             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
                             <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
