container-main firsr check

--- a/index.html
+++ b/index.html
@@ -158,41 +158,45 @@
 
             <section class="section-message">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-8">
-                            <h3>Contact me</h3>
-                            <div class="row">
-                                <input class="full-name col-6" type="text" placeholder="Full Name">
-                                <input class="email col-6" type="text" placeholder="Email address">
-                                <input class="message col-12" type="text" placeholder="Your message">
-                            </div>
-                            <button class="btn send-message">
-                                <a href="#">Send</a>
-                            </button>
-                        </div>
+                    <h3 class="text-center">Contact me</h3>
+                    <div class="row justify-content-between">
+                        <input class="full-name col-5" type="text" placeholder="Full Name">
+                        <input class="email col-6" type="text" placeholder="Email address">
                     </div>
-                    <!-- /.row -->
+
+                    
+
+                    <div class="row mt-3">
+                        <input class="message col-12" type="text" placeholder="Your message">
+                    </div>
+                    <button class="btn send-message">
+                        <a href="#">Send</a>
+                    </button>
                 </div>
                 <!-- /.container -->
             </section>
             <!-- /.section-message -->
         
             <footer>
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
-                        <div class="col-6 d-none d-md-block">
-                            <h2>Yana Mitlitska</h2>
-                        </div>
-                        <div class="col-6 m-auto">
-                            <ul>
-                                <li>Linkedin: Yana Mitlitska</li>
-                                <li>Behance: Yana Mitlitska</li>
-                                <li>Etsy: MitlitskaGallery</li>
-                                <li>Instagram: @yana.mitl</li>
-                                <li>+380 (50) 14-88-719</li>
-                                <li>mvaleryanova
-                                    @gmail.com</li>
-                            </ul>
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="col-12">
+                                    <ul>
+                                        <li>Linkedin: Yana Mitlitska</li>
+                                        <li>Behance: Yana Mitlitska</li>
+                                        <li>Etsy: MitlitskaGallery</li>
+                                        <li>Instagram: @yana.mitl</li>
+                                        <li>+380 (50) 14-88-719</li>
+                                        <li>mvaleryanova
+                                            @gmail.com</li>
+                                    </ul>
+                                </div>
+                                <div class="col-12">
+                                    <h2><span>Yana</span> Mitlitska</h2>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- /.row -->
